Fixed compile issues

--- a/CharactersWithoutNumber/Views/Character/Create.cshtml
+++ b/CharactersWithoutNumber/Views/Character/Create.cshtml
@@ -286,8 +286,8 @@
                                     </div>
                                 </td>
                                 <td>
-                                    +1 <!-- // (at symbol)Model.StrengthModifier; -->
-                                    @Html.DisplayNameFor(Character => Character.StrengthModifier)
+                                    <!-- // (at symbol)Model.StrengthModifier; -->
+                                    @Html.DisplayNameFor(Character => Character.StrengthModifier)   <!--TODO: have this dynamically change when Strength etc changes using JS-->
                                 </td>
                             </tr>
                             <tr>
