put attributebonus in it's own class
Need to make the overall attributes DRY

--- a/CharactersWithoutNumber/Views/Character/Details.cshtml
+++ b/CharactersWithoutNumber/Views/Character/Details.cshtml
@@ -47,6 +47,12 @@
             @Html.DisplayFor(model => model.Strength)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.StrengthModifier)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.StrengthModifier)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.Dexterity)
         </dt>
         <dd>
