Implemented classes for calculating level and next xp

--- a/CharactersWithoutNumber/Views/Character/Create.cshtml
+++ b/CharactersWithoutNumber/Views/Character/Create.cshtml
@@ -1,12 +1,11 @@
 ﻿@model CharactersWithoutNumber.Models.Character
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Character Creator";
 }
 
-<h2>Create</h2>
+<h2>Character Creator</h2>
 
-<h4>Character</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
