--- a/CharactersWithoutNumber/Views/Character/Index.cshtml
+++ b/CharactersWithoutNumber/Views/Character/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<CharactersWithoutNumber.Models.Character>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Characters";
 }
 
-<h2>Index</h2>
+<h2>Characters</h2>
 
 <p>
     <a asp-action="Create">Create New</a>
